--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example.wechat.mp</groupId>
+    <groupId>com.wechat.mp</groupId>
     <artifactId>wechat-mp-developers</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>wechat-mp-developers</name>
